--- a/.config
+++ b/.config
@@ -93,6 +93,7 @@ CONFIG_DEFAULT_luci-app-adguardhome=y
 CONFIG_DEFAULT_luci-app-aliyundrive-fuse=y
 CONFIG_DEFAULT_luci-app-aliyundrive-webdav=y
 CONFIG_DEFAULT_luci-app-amlogic=y
+CONFIG_DEFAULT_luci-app-aria2=y
 CONFIG_DEFAULT_luci-app-arpbind=y
 CONFIG_DEFAULT_luci-app-autoreboot=y
 CONFIG_DEFAULT_luci-app-cifs-mount=y
@@ -109,10 +110,10 @@ CONFIG_DEFAULT_luci-app-netdata=y
 CONFIG_DEFAULT_luci-newapi=y
 CONFIG_DEFAULT_luci-app-nlbwmon=y
 # CONFIG_DEFAULT_luci-app-oaf is not set
-CONFIG_DEFAULT_luci-app-onliner=y
+# CONFIG_DEFAULT_luci-app-onliner is not set
 CONFIG_DEFAULT_luci-app-openvpn-server=y
 CONFIG_DEFAULT_luci-app-passwall=y
-# CONFIG_DEFAULT_luci-app-qbittorrent is not set
+CONFIG_DEFAULT_luci-app-qbittorrent=y
 CONFIG_DEFAULT_luci-app-ramfree=y
 CONFIG_DEFAULT_luci-app-samba4=y
 CONFIG_DEFAULT_luci-app-socat=y
@@ -120,7 +121,7 @@ CONFIG_DEFAULT_luci-app-ssr-plus=y
 CONFIG_DEFAULT_luci-app-ssr-mudb-server=y
 CONFIG_DEFAULT_luci-app-tcpdump=y
 CONFIG_DEFAULT_luci-app-timecontrol=y
-# CONFIG_DEFAULT_luci-app-transmission is not set
+CONFIG_DEFAULT_luci-app-transmission=y
 CONFIG_DEFAULT_luci-app-ttyd=y
 CONFIG_DEFAULT_luci-app-turboacc=y
 CONFIG_DEFAULT_luci-app-uhttpd=y
@@ -4775,7 +4776,7 @@ CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
 CONFIG_PACKAGE_luci-app-amlogic=y
 # CONFIG_PACKAGE_luci-app-amule is not set
 CONFIG_PACKAGE_luci-app-argon-config=y
-# CONFIG_PACKAGE_luci-app-aria2 is not set
+CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-arpbind=y
 # CONFIG_PACKAGE_luci-app-asterisk is not set
 # CONFIG_PACKAGE_luci-app-attendedsysupgrade is not set
@@ -4894,7 +4895,7 @@ CONFIG_PACKAGE_luci-app-netdata=y
 # CONFIG_PACKAGE_luci-app-olsr is not set
 # CONFIG_PACKAGE_luci-app-olsr-services is not set
 # CONFIG_PACKAGE_luci-app-olsr-viz is not set
-CONFIG_PACKAGE_luci-app-onliner=y
+# CONFIG_PACKAGE_luci-app-onliner is not set
 # CONFIG_PACKAGE_luci-app-openclash is not set
 # CONFIG_PACKAGE_luci-app-openvpn is not set
 CONFIG_PACKAGE_luci-app-openvpn-server=y
@@ -4908,7 +4909,7 @@ CONFIG_PACKAGE_luci-app-passwall=y
 #
 CONFIG_PACKAGE_luci-app-passwall_Transparent_Proxy=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG is not set
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_IPv6_Nat is not set
@@ -4958,9 +4959,9 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-privoxy is not set
 # CONFIG_PACKAGE_luci-app-ps3netsrv is not set
 # CONFIG_PACKAGE_luci-app-pushbot is not set
-# CONFIG_PACKAGE_luci-app-qbittorrent is not set
+CONFIG_PACKAGE_luci-app-qbittorrent=y
 # CONFIG_PACKAGE_luci-app-qbittorrent_static is not set
-# CONFIG_PACKAGE_luci-app-qbittorrent_dynamic is not set
+CONFIG_PACKAGE_luci-app-qbittorrent_dynamic=y
 # CONFIG_PACKAGE_luci-app-qos is not set
 # CONFIG_PACKAGE_luci-app-quickstart is not set
 # CONFIG_PACKAGE_luci-app-radicale is not set
@@ -5017,7 +5018,7 @@ CONFIG_PACKAGE_luci-app-tcpdump=y
 # CONFIG_PACKAGE_luci-app-tencentddns is not set
 CONFIG_PACKAGE_luci-app-timecontrol=y
 # CONFIG_PACKAGE_luci-app-tinyproxy is not set
-# CONFIG_PACKAGE_luci-app-transmission is not set
+CONFIG_PACKAGE_luci-app-transmission=y
 # CONFIG_PACKAGE_luci-app-travelmate is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-turboacc=y
@@ -5184,7 +5185,7 @@ CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-passwall-zh_Hans is not set
-# CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn is not set
+CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-samba4-en is not set
 CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
@@ -5195,7 +5196,7 @@ CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-tcpdump-en is not set
 CONFIG_PACKAGE_luci-i18n-tcpdump-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-transmission-en is not set
-# CONFIG_PACKAGE_luci-i18n-transmission-zh-cn is not set
+CONFIG_PACKAGE_luci-i18n-transmission-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-timecontrol-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-timecontrol-zh_Hans is not set
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
@@ -5325,13 +5326,13 @@ CONFIG_PACKAGE_minidlna=y
 # CONFIG_PACKAGE_opentracker6 is not set
 # CONFIG_PACKAGE_qBittorrent-Enhanced-Edition is not set
 # CONFIG_PACKAGE_qBittorrent-static is not set
-# CONFIG_PACKAGE_qbittorrent is not set
+CONFIG_PACKAGE_qbittorrent=y
 # CONFIG_PACKAGE_rtorrent is not set
 # CONFIG_PACKAGE_rtorrent-rpc is not set
 # CONFIG_PACKAGE_transmission-cli-openssl is not set
 # CONFIG_PACKAGE_transmission-daemon-openssl is not set
 # CONFIG_PACKAGE_transmission-remote-openssl is not set
-# CONFIG_PACKAGE_transmission-web is not set
+CONFIG_PACKAGE_transmission-web=y
 # CONFIG_PACKAGE_transmission-web-control is not set
 # end of BitTorrent
 
@@ -5376,13 +5377,13 @@ CONFIG_PACKAGE_minidlna=y
 # CONFIG_PACKAGE_ariang-nginx is not set
 # CONFIG_PACKAGE_baidupcs-web is not set
 # CONFIG_PACKAGE_leech is not set
-# CONFIG_PACKAGE_webui-aria2 is not set
+CONFIG_PACKAGE_webui-aria2=y
 # end of Download Manager
 
 #
 # File Transfer
 #
-# CONFIG_PACKAGE_aria2 is not set
+CONFIG_PACKAGE_aria2=y
 # CONFIG_PACKAGE_atftp is not set
 # CONFIG_PACKAGE_atftpd is not set
 CONFIG_PACKAGE_curl=y
