--- a/.config
+++ b/.config
@@ -449,7 +449,7 @@ CONFIG_PACKAGE_luci-newapi=y
 # CONFIG_PACKAGE_luci-app-acme is not set
 # CONFIG_PACKAGE_luci-app-adblock is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-CONFIG_PACKAGE_luci-app-adguardhome=y
+# CONFIG_PACKAGE_luci-app-adguardhome is not set
 # CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary is not set
 # CONFIG_PACKAGE_luci-app-advanced-reboot is not set
 # CONFIG_PACKAGE_luci-app-ahcp is not set
@@ -590,7 +590,7 @@ CONFIG_PACKAGE_luci-app-samba4=y
 # CONFIG_PACKAGE_luci-app-squid is not set
 # CONFIG_PACKAGE_luci-app-ssrserver-python is not set
 # CONFIG_PACKAGE_luci-app-statistics is not set
-CONFIG_PACKAGE_luci-app-syncdial=y
+# CONFIG_PACKAGE_luci-app-syncdial is not set
 # CONFIG_PACKAGE_luci-app-tinyproxy is not set
 CONFIG_PACKAGE_luci-app-transmission=y
 # CONFIG_PACKAGE_luci-app-travelmate is not set
@@ -624,7 +624,7 @@ CONFIG_PACKAGE_luci-app-vsftpd=y
 CONFIG_PACKAGE_luci-app-wol=y
 # CONFIG_PACKAGE_luci-app-wrtbwmon is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
-CONFIG_PACKAGE_luci-app-zerotier=y
+# CONFIG_PACKAGE_luci-app-zerotier is not set
 
 # LuCI-theme:
 # CONFIG_PACKAGE_luci-theme-argon is not set
@@ -666,6 +666,7 @@ CONFIG_PACKAGE_zoneinfo-core=y
 CONFIG_PACKAGE_acpid=y
 CONFIG_PACKAGE_apcupsd=y
 CONFIG_PACKAGE_apcupsd-cgi=y
+# CONFIG_PACKAGE_adguardhome is not set
 CONFIG_PACKAGE_attr=y
 CONFIG_PACKAGE_autocore-arm=y
 # CONFIG_PACKAGE_autosamba is not set
@@ -742,6 +743,7 @@ CONFIG_PACKAGE_lscpu=y
 CONFIG_PACKAGE_lz4=y
 CONFIG_PACKAGE_mkf2fs=y
 CONFIG_PACKAGE_mount-utils=y
+# CONFIG_PACKAGE_mwan3 is not set
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_ntfs-3g=y
@@ -805,3 +807,13 @@ CONFIG_PCAP_HAS_USB=y
 CONFIG_PCAP_HAS_NETFILTER=y
 CONFIG_KERNEL_MAGIC_SYSRQ=y
 CONFIG_BUSYBOX_DEFAULT_FALLOCATE=y
+
+# Base system:
+CONFIG_PACKAGE_zram-swap=y
+
+# Other modules:
+CONFIG_PACKAGE_kmod-zram=y
+CONFIG_ZRAM_DEF_COMP_LZORLE=y
+# CONFIG_ZRAM_DEF_COMP_LZO is not set
+# CONFIG_ZRAM_DEF_COMP_LZ4 is not set
+# CONFIG_ZRAM_DEF_COMP_ZSTD is not set
