--- a/.github/workflows/编译固件.yml
+++ b/.github/workflows/编译固件.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: 检查服务器配置
       run: |
-        echo "警告⚠"
+        echo "警告?"
         echo "若分配的服务器性能不足，插件选择过多时，建议重新运行！"
         echo "已知CPU型号性能：8370C > 8272CL > 8171M > E5系列"
         echo "--------------------------CPU信息--------------------------"
@@ -62,24 +62,15 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
-        # echo "COMPILE_STARTINGTIME=$(date +"%m.%d.%H%M")" >> $GITHUB_ENV
-        # 清理多余文件，腾出磁盘空间
-        # docker rmi `docker images -q`
-        # sudo -E apt-get remove -y --purge azure-cli ghc zulu* hhvm llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
-        # sudo rm -rf /etc/mysql /etc/php /swapfile
+        echo "status=success" >> ${GITHUB_OUTPUT}
 
     - name: 克隆源码
       working-directory: /workdir
+      if: ${{ steps.init.outputs.status }} == 'success' && !cancelled()
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
-
-    - name: 编译工具链缓存
-      uses: klever1988/cachewrtbuild@main
-      with:
-        ccache: 'false'
-        prefix: ${{ github.workspace }}/openwrt
 
     - name: 加载自定义feeds
       run: |
@@ -117,10 +108,8 @@ jobs:
         cd openwrt
         echo -e "$(($(nproc) + 1)) thread compile"
         make -j$(($(nproc) + 1)) || make -j1 || make -j1 V=s
-        echo "::set-output name=status::success"
-        grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
-        [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
-        echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        echo "build_tag=openwrt_armvirt_v8_$(date +"%m.%d.%H%M")" >> ${GITHUB_OUTPUT}
+        echo "status=success" >> ${GITHUB_OUTPUT}
 
     - name: 清理磁盘空间
       if: (!cancelled())
@@ -155,32 +144,18 @@ jobs:
         KERNEL_REPO_URL: https://github.com/ophub/kernel/tree/main/pub/stable
         KERNEL_VERSION_NAME: 5.4.200_5.15.60_6.0.1
 
-    - name: 发布固件
-      uses: ncipollo/release-action@main
-      if: env.PACKAGED_STATUS == 'success' && !cancelled()
-      with:
-        tag: openwrt_armvirt_v8_${{ env.PACKAGED_OUTPUTDATE }}
-        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
-        allowUpdates: true
-        token: ${{ secrets.GH_TOKEN }}
-        body: |
-          ### **适用于Amlogic平台的N1盒子OpenWrt固件--全插件**
-          * **固件信息：**
-          默认IP: `10.57.20.1`
-          默认用户名: `root`
-          默认密码: `password`
-          * **使用方法：**
-          1. 安装固件：写入U盘直接使用；U盘启动后可输入命令 `openwrt-install-amlogic` 按照英文提示写入到emmc
-          2. 更新固件：将固件放在 `/mnt/mmcblk2p4/` 目录下，输入命令 `openwrt-update-amlogic` 可直接更新
-          3. 登录Luci界面后，可直接使用`晶晨宝盒`插件进行写入emmc或者更新操作（使用前先按需求填写好插件设置），免去手动输入命令！
-          * **更新说明：**
-          目前已集成大部分常用插件！
-
-    - name: 清理Actions空间
-      uses: Mattraks/delete-workflow-runs@main
-      with:
+      - name: Upload the packaged firmware to Release
+        uses: ncipollo/release-action@main
+        if: ${{ env.PACKAGED_STATUS }} == 'success' && !cancelled()
+        with:
+          tag: ${{ steps.compile.outputs.build_tag }}
+          artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
+          allowUpdates: true
           token: ${{ secrets.GH_TOKEN }}
-          repository: ${{ github.repository }}
-          keep_minimum_runs: 60
-          retain_days: 60
-          #retain_days: ${{ github.event.inputs.action_days }}
+          body: |
+            This is OpenWrt firmware for Amlogic s9xxx tv box
+            * Firmware information
+            Default IP: 10.57.20.1
+            Default username: root
+            Default password: password
+            Install to EMMC: Login to OpenWrt → System → Amlogic Service → Install OpenWrt
