--- a/.github/workflows/编译固件.yml
+++ b/.github/workflows/编译固件.yml
@@ -11,6 +11,8 @@ name: 编译固件
 on:
   repository_dispatch:
   workflow_dispatch:
+  schedule:
+    - cron: '0 23 * * *'
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
@@ -34,7 +36,7 @@ jobs:
 
     - name: 检查服务器配置
       run: |
-        echo "警告?"
+        echo "警告⚠"
         echo "若分配的服务器性能不足，插件选择过多时，建议重新运行！"
         echo "已知CPU型号性能：8370C > 8272CL > 8171M > E5系列"
         echo "--------------------------CPU信息--------------------------"
@@ -62,15 +64,24 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
-        echo "status=success" >> ${GITHUB_OUTPUT}
+        # echo "COMPILE_STARTINGTIME=$(date +"%m.%d.%H%M")" >> $GITHUB_OUTPUT
+        # 清理多余文件，腾出磁盘空间
+        # docker rmi `docker images -q`
+        # sudo -E apt-get remove -y --purge azure-cli ghc zulu* hhvm llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
+        # sudo rm -rf /etc/mysql /etc/php /swapfile
 
     - name: 克隆源码
       working-directory: /workdir
-      if: ${{ steps.init.outputs.status }} == 'success' && !cancelled()
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+
+    - name: 编译工具链缓存
+      uses: klever1988/cachewrtbuild@main
+      with:
+        ccache: 'false'
+        prefix: ${{ github.workspace }}/openwrt
 
     - name: 加载自定义feeds
       run: |
@@ -108,8 +119,10 @@ jobs:
         cd openwrt
         echo -e "$(($(nproc) + 1)) thread compile"
         make -j$(($(nproc) + 1)) || make -j1 || make -j1 V=s
-        echo "build_tag=openwrt_armvirt_v8_$(date +"%m.%d.%H%M")" >> ${GITHUB_OUTPUT}
-        echo "status=success" >> ${GITHUB_OUTPUT}
+        echo "::set-output name={status}::{success}"
+        grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
+        [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_OUTPUT
+        echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_OUTPUT
 
     - name: 清理磁盘空间
       if: (!cancelled())
@@ -132,30 +145,30 @@ jobs:
         echo "列出空间占用前10的目录或文件："
         sudo du -h --max-depth=1 /workdir/openwrt |sort -nr | head -10
 
-        - name: 打包内核
-        uses: unifreq/openwrt_packit@master
-        env:
+    - name: 打包内核
+      uses: unifreq/openwrt_packit@master
+      env:
         WHOAMI: tsingui
         OPENWRT_ARMVIRT: openwrt-armvirt/*.tar.gz
        # PACKAGE_SOC: vplus_beikeyun_l1pro_s905d_s905x2_s905x3_s912_s922x_s922x-n2_qemu
         PACKAGE_SOC: s905d_s905x3
        # KERNEL_AUTO_LATEST: false
        # KERNEL_REPO_URL: https://github.com/tsingui/Actions_OpenWrt-Amlogic/tree/main/kernel
-        KERNEL_REPO_URL: https://github.com/ophub/kernel/tree/main/pub/stable
+       # KERNEL_REPO_URL: https://github.com/ophub/kernel/tree/main/pub/stable
         KERNEL_VERSION_NAME: 5.4.200_5.15.60_6.0.1
 
-      - name: Upload the packaged firmware to Release
-        uses: ncipollo/release-action@main
-        if: ${{ env.PACKAGED_STATUS }} == 'success' && !cancelled()
-        with:
-          tag: ${{ steps.compile.outputs.build_tag }}
-          artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
-          allowUpdates: true
-          token: ${{ secrets.GH_TOKEN }}
-          body: |
-            This is OpenWrt firmware for Amlogic s9xxx tv box
-            * Firmware information
-            Default IP: 10.57.20.1
-            Default username: root
-            Default password: password
-            Install to EMMC: Login to OpenWrt → System → Amlogic Service → Install OpenWrt
+    - name: 发布固件
+      uses: ncipollo/release-action@main
+      if: env.PACKAGED_STATUS == 'success' && !cancelled()
+      with:
+        tag: openwrt_armvirt_v8_${{ env.PACKAGED_OUTPUTDATE }}
+        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
+        allowUpdates: true
+        token: ${{ secrets.GH_TOKEN }}
+        body: |
+          ### **适用于Amlogic平台OpenWrt固件**
+          * **固件信息：**
+          默认IP: `10.57.20.1`
+          默认用户名: `root`
+          默认密码: `password`
+
