--- a/.github/workflows/编译固件.yml
+++ b/.github/workflows/编译固件.yml
@@ -60,7 +60,7 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
-        # echo "COMPILE_STARTINGTIME=$(date +"%Y%m%d%H%M")" >> $GITHUB_OUTPUT
+        # echo "COMPILE_STARTINGTIME=$(date +"%Y-%m-%d-%H-%M")" >> $GITHUB_OUTPUT
         # 清理多余文件，腾出磁盘空间
         # docker rmi `docker images -q`
         # sudo -E apt-get remove -y --purge azure-cli ghc zulu* hhvm llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
@@ -109,7 +109,7 @@ jobs:
         cd openwrt
         echo -e "$(($(nproc) + 1)) thread compile"
         make -j$(($(nproc) + 1)) || make -j1 || make -j1 V=s
-        echo "build_tag=openwrt_armvirt_v8_$(date +"%Y%m%d%H%M")" >> $GITHUB_OUTPUT
+        echo "build_tag=openwrt_armvirt_v8_$(date +"%Y-%m-%d-%H-%M")" >> $GITHUB_OUTPUT
         echo "status=success" >> $GITHUB_OUTPUT
 
     - name: 清理磁盘空间
