--- a/.github/workflows/快速打包.yml
+++ b/.github/workflows/快速打包.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        tag: openwrt_armvirt_v8_$(date +"%Y-%m-%d-%H-%M")
+        tag: openwrt_armvirt_v8_${{ env.PACKAGED_OUTPUTDATE }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
