--- a/.github/workflows/编译固件.yml
+++ b/.github/workflows/编译固件.yml
@@ -142,6 +142,7 @@ jobs:
         PACKAGE_SOC: s905d_s905x3
        # KERNEL_AUTO_LATEST: false
        # KERNEL_REPO_URL: https://github.com/tsingui/OpenWrt/releases/tag/kernel_stable
+        KERNEL_REPO_URL: https://github.com/breakings/OpenWrt/releases/tag/kernel_stable
         KERNEL_VERSION_NAME: 5.4.200_5.15.80_6.0.1_6.1.5
 
     - name: 发布固件
