--- a/.github/workflows/编译固件.yml
+++ b/.github/workflows/编译固件.yml
@@ -143,7 +143,7 @@ jobs:
        # KERNEL_AUTO_LATEST: false
        # KERNEL_REPO_URL: https://github.com/tsingui/OpenWrt/releases/tag/kernel_stable
         KERNEL_REPO_URL: https://github.com/breakings/OpenWrt/releases/tag/kernel_stable
-        KERNEL_VERSION_NAME: 5.4.200_5.15.80_6.0.1_6.1.5
+        KERNEL_VERSION_NAME: 5.4.200_5.15.80_6.1.5
 
     - name: 发布固件
       uses: ncipollo/release-action@main
