--- a/.github/workflows/快速打包Kernel by ophub.yml
+++ b/.github/workflows/快速打包Kernel by ophub.yml
@@ -4,7 +4,7 @@
 # Cron: min (0 - 59) / hour (0 - 23) / day of month (1 - 31) / month (1 - 12) / day of week (0 - 6)(Sunday - Saturday)
 #============================================================================================================
 
-name: 快速打包固件
+name: 快速打包固件Kernel by ophub
 
 on:
   repository_dispatch:
