Update 快速打包Kernel by flippy.yml

--- a/.github/workflows/快速打包Kernel by flippy.yml
+++ b/.github/workflows/快速打包Kernel by flippy.yml
@@ -49,4 +49,4 @@ jobs:
           * **固件信息：**
           默认IP: `10.57.21.2`
           默认用户名: `root`
-          默认密码: `password`
+          默认密码: `空`
