--- a/.config
+++ b/.config
@@ -5131,6 +5131,16 @@ CONFIG_PACKAGE_luci-mod-system=y
 # CONFIG_PACKAGE_luci-app-airplay2 is not set
 # CONFIG_PACKAGE_luci-app-airwhu is not set
 # CONFIG_PACKAGE_luci-app-aliddns is not set
+CONFIG_PACKAGE_luci-app-aliyundrive-fuse=y
+CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+
+#
+# Configuration
+#
+CONFIG_PACKAGE_aliyundrive-fuse=y
+CONFIG_PACKAGE_aliyundrive-webdav=y
+# end of Configuration
+
 CONFIG_PACKAGE_luci-app-amlogic=y
 # CONFIG_PACKAGE_luci-app-amule is not set
 # CONFIG_PACKAGE_luci-app-apinger is not set
