--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -120,6 +120,10 @@ jobs:
         make -j$(($(nproc) + 1)) || make -j1 || make -j1 V=s
         echo "build_tag=openwrt_armvirt_v8_$(date +"%Y-%m-%d-%H-%M")" >> $GITHUB_OUTPUT
         echo "status=success" >> $GITHUB_OUTPUT
+        echo "--------------------------硬盘信息--------------------------"
+        echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l) \n"
+        echo "硬盘详情："
+        df -Th
 
     - name: 发布通用镜像
       uses: ncipollo/release-action@main
