--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -55,7 +55,7 @@ jobs:
       run: |
         # 清理多余文件，腾出磁盘空间
         docker rmi `docker images -q`
-        sudo -E apt-get remove -y --purge android* azure-cli dotnet* docker* firefox ghc* google* llvm* mysql* mssql-tools mongodb* moby* msodbcsql17 openjdk* php* powershell* snap* zulu* || true
+        sudo -E apt-get remove -y --purge android* aspnetcore* azure-cli* dotnet* docker* firefox ghc* google* llvm* mysql* mssql-tools mongodb* moby* msodbcsql17* openjdk* php* powershell* snap* zulu* || true
         sudo rm -rf /etc/apt/sources.list.d/* /etc/mysql /etc/php /usr/share/dotnet /usr/local/lib/android /opt/ghc 2>/dev/null
         sudo -E apt-get -y update
         # sudo -E apt-get -y install $(curl -fsSL git.io/depends-ubuntu-2004)
