--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -9,6 +9,10 @@
 name: 编译通用镜像
 
 on:
+  schedule:
+    - cron: 0 12 * * 5
+  watch:
+    types: started
   repository_dispatch:
   workflow_dispatch:
 
