--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -9,8 +9,8 @@
 name: 编译通用镜像
 
 on:
-  schedule:
-    - cron: '30 8 * * 2,6'
+ # schedule:
+ #   - cron: '30 8 * * 2,6'
  # repository_dispatch:
   workflow_dispatch:
 
