--- a/.github/workflows/ax1800.yml
+++ b/.github/workflows/ax1800.yml
@@ -6,7 +6,7 @@
 # Cron: min (0 - 59) / hour (0 - 23) / day of month (1 - 31) / month (1 - 12) / day of week (0 - 6)(Sunday - Saturday)
 #===========================================================================================================
 
-name: 编译通用镜像
+name: ax1800
 
 on:
   # push:
