--- a/.config
+++ b/.config
@@ -53,14 +53,14 @@ CONFIG_TARGET_armsr=y
 # CONFIG_TARGET_uml is not set
 # CONFIG_TARGET_zynq is not set
 # CONFIG_TARGET_x86 is not set
-# CONFIG_TARGET_armsr_32 is not set
-CONFIG_TARGET_armsr_64=y
+# CONFIG_TARGET_armsr_armv7 is not set
+CONFIG_TARGET_armsr_armv8=y
 # CONFIG_TARGET_MULTI_PROFILE is not set
-CONFIG_TARGET_armsr_64_DEVICE_generic=y
+CONFIG_TARGET_armsr_armv8_DEVICE_generic=y
 CONFIG_HAS_SUBTARGETS=y
 CONFIG_HAS_DEVICES=y
 CONFIG_TARGET_BOARD="armsr"
-CONFIG_TARGET_SUBTARGET="64"
+CONFIG_TARGET_SUBTARGET="armv8"
 CONFIG_TARGET_PROFILE="DEVICE_generic"
 CONFIG_TARGET_ARCH_PACKAGES="aarch64_generic"
 CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mcpu=generic"
